--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
    - "3.6"
    - "3.7"
+branches:
+  only:
+    - devel
 install:
   - pip install -r requirements.txt
 script:
