--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,10 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-after_success:
-  - deploy.sh
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: devel-build
