--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
   on:
-    branch: devel-build
+    branch: devel
+  target_branch: devel-build
