--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,14 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
+    - memote run
+    - memote report snapshot test_model.xml
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep_history: true
-  on:
-    branch: devel
-    condition: $TRAVIS_PYTHON_VERSION = "3.7"
-  target_branch: devel-build
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+    keep_history: true
+    on:
+      branch: devel
+      condition: $TRAVIS_PYTHON_VERSION = "3.7"
+    target_branch: devel-build
