--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - memote report snapshot test_model.xml
+    - memote report snapshot --filename "docs/index.html" test_model.xml
 deploy:
   - provider: pages
     skip_cleanup: true
