--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - memote report snapshot --filename "docs/index.html" test_model.xml
+    - memote report snapshot --filename "index.html" test_model.xml
 deploy:
   - provider: pages
     skip_cleanup: true
@@ -20,4 +20,4 @@ deploy:
     on:
       branch: devel
       condition: $TRAVIS_PYTHON_VERSION = "3.7"
-    target_branch: devel-build
+    target_branch: gh-pages
