--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python:
-   - "3.6"
    - "3.7"
 branches:
   only:
     - devel
 install:
   - pip install -r requirements.txt
+  - travis_wait 30 mvn install
 script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
