--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - memote report snapshot --filename "index.html" test_model.xml
+    - travis_wait 30 memote report snapshot --filename "index.html" test_model.xml
 deploy:
   - provider: pages
     skip_cleanup: true
