--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
     - python python/basic_fba.py
     - python python/restricted_fba.py
     - travis_wait 60 memote report snapshot test_model.xml
+    - python python/manage_reports.py
 deploy:
   - provider: pages
     skip_cleanup: true
@@ -20,3 +21,11 @@ deploy:
       branch: devel
       condition: $TRAVIS_PYTHON_VERSION = "3.7"
     target_branch: gh-pages
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+    keep_history: true
+    on:
+      branch: devel
+      condition: $TRAVIS_PYTHON_VERSION = "3.7"
+    target_branch: devel
