--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - memote report snapshot test_model.xml
+    - travis wait 30 memote report snapshot test_model.xml
     - python python/manage_reports.py
+    - ./report.sh
 
 deploy:
   - provider: pages
