--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - travis_wait 30 memote report snapshot test_model.xml
+    - memote report snapshot test_model.xml
     - python python/manage_reports.py
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then bash ./report.sh; fi'
 
