--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
     - python python/basic_fba.py
     - python python/restricted_fba.py
     - git stash
+    - git init
     - memote run test_model.xml
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST; fi'
     - python python/manage_reports.py
