--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
     - python python/tsv_to_sbml.py
     - python python/basic_fba.py
     - python python/restricted_fba.py
-    - travis_wait 30 memote run --ignore-git --location . test_model.xml
+    - travis_wait 30 memote run --ignore-git --location . test_model.xml > results.txt
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST; fi'
     - python python/manage_reports.py
 
