--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ install:
   - pip install -r requirements.txt
 script:
     - python python/tsv_to_sbml.py
-    - python python/basic_fba.py
+    - python python/basic_fba.py >&1 | tee errors.txt
     - python python/restricted_fba.py
     - travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt
-    - head results.txt
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST; fi'
     - python python/manage_reports.py
 
