--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ script:
     - python python/tsv_to_sbml.py
     - travis_wait 2 python python/basic_fba.py
     - python python/restricted_fba.py
-    - travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt
+    - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt; fi'
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST; fi'
+    - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; travis_retry memote report snapshot --location . test_model.xml; fi'
     - python python/manage_reports.py
 
 
