--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
     - python python/restricted_fba.py
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt; fi'
     - 'if [ "$TRAVIS_PULL_REQUEST" != "true" ]; then python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST; fi'
-    - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then travis_retry memote report snapshot --location . test_model.xml; fi'
+    - travis_retry memote report snapshot --location . test_model.xml
     - python python/manage_reports.py
 
 
