--- a/.travis.yml
+++ b/.travis.yml
@@ -6,32 +6,18 @@ branches:
     - devel
 install:
   - pip install -r requirements.txt
+script:
+    - python python/tsv_to_sbml.py
+    - travis_wait 2 python python/basic_fba.py
+    - python python/restricted_fba.py
+    - travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt
+      if type = pull_request
+    - python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST
+      if type = pull_request
+    - travis_retry memote report snapshot test_model.xml
+      if type = push
+    - python python/manage_reports.py
 
-jobs:
-  include:
-    - stage: convert
-      script: "python python/tsv_to_sbml.py"
-    - stage: test
-      script:
-      - travis_wait 2 python python/basic_fba.py
-      - python python/restricted_fba.py
-    - stage: PR
-      script: 
-      - travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt
-      - python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST
-    - stage: build
-      script: travis_retry memote report snapshot test_model.xml
-    - stage: clean
-      script: python python/manage_reports.py
-
-stages:
-  - convert
-  - test
-  - name: PR 
-    if: type = pull_request
-  - name: build
-    if: type = push
-  - clean
 
 deploy:
   - provider: pages
