--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,15 @@ script:
     - python python/tsv_to_sbml.py
     - travis_wait 2 python python/basic_fba.py
     - python python/restricted_fba.py
-    - travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt
-      if type = pull_request
-    - python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST
-      if type = pull_request
-    - travis_retry memote report snapshot test_model.xml
-      if type = push
+    - if [ $TRAVIS_PULL_REQUEST != 'false' ]; then
+        travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
+      fi
+    - if [$TRAVIS_PULL_REQUES" != "false" ]; then 
+        python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
+      fi
+    - if [$TRAVIS_PULL_REQUES" == "false" ]; then 
+        travis_retry memote report snapshot test_model.xml;
+      fi
     - python python/manage_reports.py
 
 
