--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
     - if [ $TRAVIS_PULL_REQUEST != 'false' ]; then
         travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
       fi
-    - if [$TRAVIS_PULL_REQUEST" != "false" ]; then 
+    - if [$TRAVIS_PULL_REQUEST" != 'false' ]; then 
         python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
       fi
-    - if [$TRAVIS_PULL_REQUEST" == "false" ]; then 
+    - if [$TRAVIS_PULL_REQUEST" == 'false' ]; then 
         travis_retry memote report snapshot test_model.xml;
       fi
     - python python/manage_reports.py
