--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ script:
     - python python/tsv_to_sbml.py
     - travis_wait 2 python python/basic_fba.py
     - python python/restricted_fba.py
-    - if [ $TRAVIS_PULL_REQUEST != false ]; then
+    - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
         travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
         python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
       fi
-    - if [$TRAVIS_PULL_REQUEST == false ]; then
+    - if [$TRAVIS_PULL_REQUEST == "false" ]; then
         travis_retry memote report snapshot test_model.xml;
       fi
     - python python/manage_reports.py
