--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
         travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
         python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
       else
-        travis_retry memote report snapshot test_model.xml;
+        travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
       fi
     - python python/manage_reports.py
 
