--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,34 @@ branches:
     - devel
 install:
   - pip install -r requirements.txt
-script:
-    - python python/tsv_to_sbml.py
-    - travis_wait 2 python python/basic_fba.py
-    - python python/restricted_fba.py
-    - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
-        travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
-        python ./comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
-      else
-        travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
-      fi
-    - python python/manage_reports.py
+jobs:
+  include:
+    - stage: build_model
+      script: python python/tsv_to_sbml.py
+    - stage: basic_tests
+      script:
+        - python python/tsv_to_sbml.py
+        - python python/basic_fba.py
+        - python python/restricted_fba.py
+    - stage: generate_memote_report
+      script: 
+        - python python/tsv_to_sbml.py
+        - travis_wait 2 python python/basic_fba.py
+        - python python/restricted_fba.py 
+        # handle PRs else handle Merge of PR
+        - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
+            python python/run_memote.py;
+            python python/comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
+          else
+            travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
+          fi
+        - python python/manage_reports.py
+
+
+stages:
+  - build_model
+  - basic_tests
+  - generate_report
 
 
 deploy:
@@ -28,4 +45,3 @@ deploy:
       branch: devel
       condition: $TRAVIS_PYTHON_VERSION = "3.7"
     target_branch: gh-pages
-
