--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
         - travis_wait 2 python python/basic_fba.py
         - python python/restricted_fba.py
         - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
-            travis_retry memote run --ignore-git --location . test_model.xml >&1 | tee results.txt;
+            python python/run_memote.py;
             python python/comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
           else
             travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
