improved the results conversion from JSON to text

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ jobs:
         - python python/tsv_to_sbml.py
         - travis_wait 2 python python/basic_fba.py
         - python python/restricted_fba.py
+        - python python/run_memote.py;
         - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
-            python python/run_memote.py;
             python python/comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST;
           else
             travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
