--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
         - python python/tsv_to_sbml.py
         - python python/run_memote.py;
         - if [ $TRAVIS_PULL_REQUEST != "false" ]; then
-            python python/comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST $DISCORD_ENDPOINT $REPO_URL;
+            python python/comment_script.py $GITHUB_TOKEN $TRAVIS_REPO_SLUG $TRAVIS_PULL_REQUEST $DISCORD_ENDPOINT $REPO_URL $TRAVIS_BUILD_NUMBER;
           else
             travis_retry memote report snapshot --filename "docs/report.html" test_model.xml;
           fi
