--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ stages:
   - basic_tests
   - generate_report
 
+after_failure:
+  - python python/failure.py
+
 # deploy:
 #   - provider: pages
 #     skip_cleanup: true
