--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,6 @@ jobs:
           else
             python python/PR_merge.py $DISCORD_ENDPOINT $TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_WEB_URL;
           fi
-        - python python/manage_reports.py
 
 stages:
   - build_model
@@ -32,7 +31,7 @@ stages:
   - generate_report
 
 after_failure:
-  - python python/failure.py
+  - python python/failure_reporter.py $DISCORD_ENDPOINT $TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_WEB_URL
 
 # deploy:
 #   - provider: pages
